# Virtual-Silk-road-lander

./: .replit  app.py  ask_secrets.py  data_import.py  data_integration.py  data_sharing.py  database.py  db_operations.py  diagnostic.py  emperor_timeline.py  empire_os_dashboard.py  empire_os_landing.py  executive_org_charts.py  github_floors.py  hsn_tax_mapping.py  hsn_transaction_system.py  init_db.py  inventory_story_generator.py  inventory_transfer.py  investment_milestone_passport.py  line_plan.py  location_inventory_tracker.py  manufacturing_dashboard.py  material_tracker.py  merchandiser_agent.py  minimal.py  navigate_to_notification_settings.py  new_app.py  notification_service.py  onboarding.py  order_booking.py  order_confirmation.py  order_style_management.py  port_test.py  product_catalog.py  product_detail.py  production_timeline.py  pyproject.toml  replit.nix  reports.py  (+20 more)
.streamlit/: config.toml
attached_assets/: 20 stores for E-Wards Loyalty prgm for Snc.xlsx  3 month consolidated ecommerce sale report copy.xlsx  AI_Engine_Application_Framework_with_Operating_Tracker_and_Role.csv  API_Mapping_Extract copy.xlsx  All EBO JAn 2025.xlsx  Business Requirement Document.docx  Business data schema.docx  Business_Expansion_Forecast_Model.csv  Business_auditreviewplanner.xlsx  Buying_House_Task_Master.csv  CAC_Tracking_Model_Template.csv  CA_Governance_Task_Master.csv  CCPC_CORE_001_Simulink_Blocks.docx  Copy of Ecommerce sales data share on 22.01.2025.xlsx  Daily sales Vs Target 1 - Updated.xlsx  Document (5).docx  EmpireOS_Role_Mapping_Table.xlsx  Flow chart.docx  (+35 more)
(+9 files in other folders)
