[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "streamlit-extras>=0.6.0",
    "streamlit>=1.44.0",
    "yfinance>=0.2.55",
    "fpdf>=1.7.2",
    "xlsxwriter>=3.2.2",
    "matplotlib>=3.10.1",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
]
